--- a/Day01/index.html
+++ b/Day01/index.html
@@ -10,7 +10,7 @@
 
 <body>
     xin chào các bạn.
-    <i>Mình là Tài và đây là test VS lần đầu</i>
+    <i>Mình là Tài và đây là test VS lần đầu và test commit trên VS</i>
     <h1 class="test">
         hihi
     </h1>
