nội dung học chiều ngày 24/2/2023

--- a/Day01/index.html
+++ b/Day01/index.html
@@ -1,26 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <title>
+        Trang web đầu tiên của tôi
+    </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-    xin chào các bạn.
-    <i>Mình là Tài và đây là test VS lần đầu và test commit trên VS</i>
-    <h1 class="test">
-        hihi
-    </h1>
+    <!--Không thể chú thích trong thẻ head
+        Nó vẫn hiển thị ra trên trang web-->
+    xin chào các bạn <i>
+        Tôi là Tài
+    </i>
+    <h1>Nội dung làm tiêu đề chính</h1>
+    <h2>Nội dung làm tiêu đề phụ</h2>
+    <p>
+        Hôm nay là ngày 24/2/2023 và
+        <b>tôi đang học F8 ở bài số 36</b>
+    </p>
+    <p> Và hiện tại là đang 4:25 PM và
+        <i>chuẩn bị về quê :)</i>
+        <u>Ngoài trời hôm nay khá mát mẻ</u>
+    </p>
+
+    <p> Và đó là sự kết hợp giữa thẻ p,b,i,u
+    </p>
+
+    <p>
+        Một ví dụ về thẻ a, đây là link fb của tôi
+        <a href="https://www.facebook.com/profile.php?id=100014149143164" class="customURL">nhấn vào đây
+        </a>để tới trang facebook của tôi
+    </p>
+    <p><b class ="Avatar">Avatar của tài khoản F8: </b></p> <img src="https://files.fullstack.edu.vn/f8-prod/user_photos/297005/63f48cfecf162.jpg"/>
+    
+    <!--Các dùng thẻ ul,li-->
+    <p>Các ngôn ngữ mà trình duyệt web có thể hiểu:</p>
+    <ul>
+        <li><b>HTML</b></li>
+        <li><b>CSS</b></li>
+        <li><b>Javascript</b></li>
+    </ul>
+
+    <!--Các dùng thẻ ol,li-->
+    <p>Các ngôn ngữ FE nền tảng:</p>
+    <ol>
+        <li><b>HTML</b></li>
+        <li><b>CSS</b></li>
+        <li><b>Javascript</b></li>
+    </ol>
 </body>
-<style>
-    .test {
-        font-size: 100px;
-        color: red;
-        background-color: gray;
-    }
-</style>
 
 </html>
+
+<style>
+    .customURL {
+        color: brown;
+        font-size: larger;
+    }
+    .Avatar{
+        font-size: 15px;
+        color:blue;
+    }
+</style>
