commit nội dung học ngày 4/3/2023

--- a/Day03/index.html
+++ b/Day03/index.html
@@ -60,7 +60,7 @@
     <uL>
         <li>
             Đảm bảo tính ngữ nghĩa cho nội dung:một nội dung chỉ được gọi là có ngữ
-            nghũa nếu nó được bọc trong 1 thẻ
+            nghĩa nếu nó được bọc trong 1 thẻ
         </li>
         <li>Khi dùng thẻ p thì ta mới có thể áp dụng CSS cho văn bản đó.</li>
     </uL>
