12/3/2023 auto format code on save

--- a/Day05/index.html
+++ b/Day05/index.html
@@ -1,66 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>9/3/2023</title>
-</head>
+  </head>
 
-<body>
-    <h1 class="title"> <mark>Nội dung học ngày 9/3/2023</mark></h1>
+  <body>
+    <h1 class="title"><mark>Nội dung học ngày 9/3/2023</mark></h1>
     <h2>Nội dung 1: Thẻ em và thẻ i</h2>
     <h3># Sự giống nhau:</h3>
-    <p>Trình duyệt hiển thị nội dung trong 2 thẻ này giống nhau, đều là <i>in nghiêng</i>.</p>
+    <p>
+      Trình duyệt hiển thị nội dung trong 2 thẻ này giống nhau, đều là
+      <i>in nghiêng</i>.
+    </p>
     <h3>#Sự khác nhau:</h3>
     <p>Thẻ i và em khác nhau về ngữ nghĩa và mục đích sử dụng.</p>
     <p><b>Thẻ i</b></p>
-    <p>Được sử dụng để thể hiện các phần nội dung trong một đoạn văn bản dưới kiểu chữ in nghiêng. Ví dụ
-        <br /> như trong đoạn văn xuất các từ ngữ chuyên ngành kỹ thuật, tên một tác phẩm, trích dẫn một câu nói,
-        <br /> nhắc tới các từ ở ngôn ngữ khác (bài viết tiếng Việt mà nhắc tới tiếng Pháp chẳng hạn), v.v.
+    <p>
+      Được sử dụng để thể hiện các phần nội dung trong một đoạn văn bản dưới
+      kiểu chữ in nghiêng. Ví dụ <br />
+      như trong đoạn văn xuất các từ ngữ chuyên ngành kỹ thuật, tên một tác
+      phẩm, trích dẫn một câu nói, <br />
+      nhắc tới các từ ở ngôn ngữ khác (bài viết tiếng Việt mà nhắc tới tiếng
+      Pháp chẳng hạn), v.v.
     </p>
 
     <p><b>Thẻ em</b></p>
-    <p> Thẻ này ở thị trường VN thường ít được sử dụng hơn thẻ i Thẻ này mang ngữ nghĩa được dùng
-        <br />để nhấn mạnh một phần nội dung trong đoạn văn (ví dụ như nhấn trọng âm trong tiếng Anh).
+    <p>
+      Thẻ này ở thị trường VN thường ít được sử dụng hơn thẻ i Thẻ này mang ngữ
+      nghĩa được dùng <br />để nhấn mạnh một phần nội dung trong đoạn văn (ví dụ
+      như nhấn trọng âm trong tiếng Anh).
     </p>
-    <p>Các trình đọc màn hình cũng có thể phân biệt được nội dung trong thẻ em để nhấn mạnh hơn vào đó.</p>
+    <p>
+      Các trình đọc màn hình cũng có thể phân biệt được nội dung trong thẻ em để
+      nhấn mạnh hơn vào đó.
+    </p>
 
     <h3>Tóm tắt</h3>
     <ul>
-        <li>Ngữ nghĩa là rất quan trọng trong HTML, hầu hết mọi thẻ trong HTML là thẻ có ngữ nghĩa.
-            <br /> Việc sử dụng đúng ngữ nghĩa chính là cách để sử dụng đúng mục đích của thẻ được tạo ra.
-        </li>
-        <li>Thẻ b sử dụng cho nội dung muốn gây sự chú ý. Nội dung của nó được hiển thị dưới dạng chữ in đậm.</li>
-        <li>Thẻ strong thể hiện sự quan trọng, nghiêm trọng, cấp bách, v.v.</li>
-        <li>Thẻ i sử dụng cho các trường hợp viết nghiêng theo quy tắc chính tả như: tên một tác phẩm, trích dẫn một câu
-            nói, v.v.</li>
-        <li>Thẻ em thể hiện sự nhấn mạnh như: nhấn mạnh từ, nhấn mạnh trọng âm, v.v.</li>
-        <li>Khi phải lựa chọn giữa ngữ nghĩa và styles, nên ưu tiên chọn ngữ nghĩa. Vì styles có thể sửa bằng CSS, còn
-            ngữ nghĩa thì không.</li>
+      <li>
+        Ngữ nghĩa là rất quan trọng trong HTML, hầu hết mọi thẻ trong HTML là
+        thẻ có ngữ nghĩa. <br />
+        Việc sử dụng đúng ngữ nghĩa chính là cách để sử dụng đúng mục đích của
+        thẻ được tạo ra.
+      </li>
+      <li>
+        Thẻ b sử dụng cho nội dung muốn gây sự chú ý. Nội dung của nó được hiển
+        thị dưới dạng chữ in đậm.
+      </li>
+      <li>Thẻ strong thể hiện sự quan trọng, nghiêm trọng, cấp bách, v.v.</li>
+      <li>
+        Thẻ i sử dụng cho các trường hợp viết nghiêng theo quy tắc chính tả như:
+        tên một tác phẩm, trích dẫn một câu nói, v.v.
+      </li>
+      <li>
+        Thẻ em thể hiện sự nhấn mạnh như: nhấn mạnh từ, nhấn mạnh trọng âm, v.v.
+      </li>
+      <li>
+        Khi phải lựa chọn giữa ngữ nghĩa và styles, nên ưu tiên chọn ngữ nghĩa.
+        Vì styles có thể sửa bằng CSS, còn ngữ nghĩa thì không.
+      </li>
     </ul>
 
     <h2>Nội dung 2: Semantics</h2>
     <hr />
     <h2>Nội dung 3: Thẻ ul và ol</h2>
     <h3># Thẻ ul</h3>
-    <p>Thẻ ul (unordered list, ý nghĩa: “danh sách không có thứ tự”) dùng để thể hiện một danh sách <br />
-        mà số thứ tự trong đó không quan trọng.</p>
-    <p>Sử dụng thẻ ul cho những tình huống thay đổi thứ tự các mục trong danh sách cũng không gây ảnh hưởng 
-        <br />
-        nhiều tới nội dung.</p>
+    <p>
+      Thẻ ul (unordered list, ý nghĩa: “danh sách không có thứ tự”) dùng để thể
+      hiện một danh sách <br />
+      mà số thứ tự trong đó không quan trọng.
+    </p>
+    <p>
+      Sử dụng thẻ ul cho những tình huống thay đổi thứ tự các mục trong danh
+      sách cũng không gây ảnh hưởng
+      <br />
+      nhiều tới nội dung.
+    </p>
 
     <h3># Thẻ ol</h3>
-    <p>Thẻ ol (ordered list, ý nghĩa: “danh sách có thứ tự”) dùng để thể hiện một danh sách mà số thứ tự trong đó mang
-        lại ý nghĩa, hoặc có quan trọng số thứ tự.</p>
+    <p>
+      Thẻ ol (ordered list, ý nghĩa: “danh sách có thứ tự”) dùng để thể hiện một
+      danh sách mà số thứ tự trong đó mang lại ý nghĩa, hoặc có quan trọng số
+      thứ tự.
+    </p>
     <p>Ví dụ:</p>
     <p>Thứ tự ngôn ngữ cần học để trở thành FE developer:</p>
     <!-- Không được sử dụng thẻ ol,ul bên trong thẻ p -->
     <ol>
-        <li>HTML, CSS</li>
-        <li>JavaScript</li>
-        <li>Lib/Framework: ReactJS hoặc VueJS hoặc Angular</li>
+      <li>HTML, CSS</li>
+      <li>JavaScript</li>
+      <li>Lib/Framework: ReactJS hoặc VueJS hoặc Angular</li>
     </ol>
 
     <!-- ul>li*3{item $} +tab -->
@@ -71,51 +103,50 @@
     </ul> -->
     <p>Ví dụ về menu phân cấp bằng các thẻ danh sách lồng nhau</p>
     <ul>
-        <li>Home</li>
-        <li>
-            Path to become FE developer:
-            <ol>
-                <li>HTML CSS</li>
-                <li>JavaScript</li>
-                <li>Lib/Framework</li>
-            </ol>
-        </li>
-        <li>About</li>
-        <li>
-            Tutorial
+      <li>Home</li>
+      <li>
+        Path to become FE developer:
+        <ol>
+          <li>HTML CSS</li>
+          <li>JavaScript</li>
+          <li>Lib/Framework</li>
+        </ol>
+      </li>
+      <li>About</li>
+      <li>
+        Tutorial
+        <ul>
+          <li>Thủ thuật</li>
+          <li>Kiến thức</li>
+          <li>
+            Đồ hoạ
             <ul>
-                <li>Thủ thuật</li>
-                <li>Kiến thức</li>
-                <li>
-                    Đồ hoạ
-                    <ul>
-                        <li>Audition</li>
-                        <li>Illustration</li>
-                        <li>Photoshop</li>
-                        <li>After Effect</li>
-                        <li>Premiere</li>
-                    </ul>
-                </li>
-                <li>Lập trình</li>
+              <li>Audition</li>
+              <li>Illustration</li>
+              <li>Photoshop</li>
+              <li>After Effect</li>
+              <li>Premiere</li>
             </ul>
-        </li>
-        <li>Contact</li>
-        <li>Login</li>
+          </li>
+          <li>Lập trình</li>
+        </ul>
+      </li>
+      <li>Contact</li>
+      <li>Login</li>
     </ul>
 
     <p>Một số ví dụ của việc set thuộc tính cho ol:</p>
     <ol type="A">
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
     </ol>
-</body>
-
+  </body>
 </html>
 
 <style>
-    .title {
-        text-align: center;
-    }
+  .title {
+    text-align: center;
+  }
 </style>
