--- a/Day01/index.html
+++ b/Day01/index.html
@@ -1,113 +1,112 @@
 <!DOCTYPE html>
 <html lang="vi">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <title>
-        Trang web đầu tiên của tôi
-    </title>
+    <title>Trang web đầu tiên của tôi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
+  </head>
 
-<body>
+  <body>
     <!--Không thể chú thích trong thẻ head
         Nó vẫn hiển thị ra trên trang web-->
-    xin chào các bạn <i>
-        Tôi là Tài
-    </i>
+    xin chào các bạn <i> Tôi là Tài </i>
     <h1>Nội dung làm tiêu đề chính</h1>
     <h2>Nội dung làm tiêu đề phụ</h2>
     <p>
-        Hôm nay là ngày 24/2/2023 và
-        <b>tôi đang học F8 ở bài số 36</b>
+      Hôm nay là ngày 24/2/2023 và
+      <b>tôi đang học F8 ở bài số 36</b>
     </p>
-    <p> Và hiện tại là đang 4:25 PM và
-        <i>chuẩn bị về quê :)</i>
-        <u>Ngoài trời hôm nay khá mát mẻ</u>
+    <p>
+      Và hiện tại là đang 4:25 PM và
+      <i>chuẩn bị về quê :)</i>
+      <u>Ngoài trời hôm nay khá mát mẻ</u>
     </p>
 
-    <p> Và đó là sự kết hợp giữa thẻ p,b,i,u
-    </p>
+    <p>Và đó là sự kết hợp giữa thẻ p,b,i,u</p>
 
     <p>
-        Một ví dụ về thẻ a, đây là link fb của tôi
-        <a href="https://www.facebook.com/profile.php?id=100014149143164" class="customURL">nhấn vào đây
-        </a>để tới trang facebook của tôi
+      Một ví dụ về thẻ a, đây là link fb của tôi
+      <a
+        href="https://www.facebook.com/profile.php?id=100014149143164"
+        class="customURL"
+        >nhấn vào đây </a
+      >để tới trang facebook của tôi
     </p>
     <p><b class="Avatar">Avatar của tài khoản F8: </b></p>
-    <img width="11%" src="https://files.fullstack.edu.vn/f8-prod/user_photos/297005/63f48cfecf162.jpg" />
+    <img
+      width="11%"
+      src="https://files.fullstack.edu.vn/f8-prod/user_photos/297005/63f48cfecf162.jpg"
+    />
 
     <!--Các dùng thẻ ul,li-->
     <p>Các ngôn ngữ mà trình duyệt web có thể hiểu:</p>
     <ul>
-        <li><b>HTML</b></li>
-        <li><b>CSS</b></li>
-        <li><b>Javascript</b></li>
+      <li><b>HTML</b></li>
+      <li><b>CSS</b></li>
+      <li><b>Javascript</b></li>
     </ul>
 
     <!--Các dùng thẻ ol,li-->
     <p>Các ngôn ngữ FE nền tảng:</p>
     <ol>
-        <li><b>HTML</b></li>
-        <li><b>CSS</b></li>
-        <li><b>Javascript</b></li>
+      <li><b>HTML</b></li>
+      <li><b>CSS</b></li>
+      <li><b>Javascript</b></li>
     </ol>
 
     <p class="table">
-        <!-- Class table ảnh hưởng đến tất cả các nội dung
+      <!-- Class table ảnh hưởng đến tất cả các nội dung
         trong thẻ p nên khi set green thì sẽ ảnh hưởng đến tất cả các thẻ hay nội dung trong thẻ p.
         Nhưng vì class ProductList tiếp tục set color cho văn bản bên trong thẻ của nó nên cuối cùng 
         văn bản trong thẻ b sẽ được set color là green-->
-        <b class="ProductList">Danh sách sản phẩm</b>
-        (test tạo bảng):
+      <b class="ProductList">Danh sách sản phẩm</b>
+      (test tạo bảng):
     </p>
 
     <!--cấu trúc tạo bảng-->
     <table>
-        <tr>
-            <th>Mã sản phẩm</th>
-            <th>Tên sản phẩm</th>
-            <th>Giá</th>
-        </tr>
-        <tr>
-            <td>SP001</td>
-            <td>Áo thun nam</td>
-            <td>200,000 VNĐ</td>
-        </tr>
+      <tr>
+        <th>Mã sản phẩm</th>
+        <th>Tên sản phẩm</th>
+        <th>Giá</th>
+      </tr>
+      <tr>
+        <td>SP001</td>
+        <td>Áo thun nam</td>
+        <td>200,000 VNĐ</td>
+      </tr>
 
-        <tr>
-            <td>SP002</td>
-            <td>Áo khoác nam</td>
-            <td>400,000 VNĐ</td>
-        </tr>
+      <tr>
+        <td>SP002</td>
+        <td>Áo khoác nam</td>
+        <td>400,000 VNĐ</td>
+      </tr>
 
-        <tr>
-            <td>SP003</td>
-            <td>Giày thể thao</td>
-            <td>300,000 VNĐ</td>
-        </tr>
-
+      <tr>
+        <td>SP003</td>
+        <td>Giày thể thao</td>
+        <td>300,000 VNĐ</td>
+      </tr>
     </table>
-</body>
-
+  </body>
 </html>
 
 <style>
-    .customURL {
-        color: brown;
-        font-size: larger;
-    }
+  .customURL {
+    color: brown;
+    font-size: larger;
+  }
 
-    .Avatar {
-        font-size: 15px;
-        color: blue;
-    }
+  .Avatar {
+    font-size: 15px;
+    color: blue;
+  }
 
-    .ProductList {
-        color: blue;
-    }
+  .ProductList {
+    color: blue;
+  }
 
-    .table {
-        color: green;
-    }
+  .table {
+    color: green;
+  }
 </style>
