--- a/Day03/index.html
+++ b/Day03/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Day03 ngày 28/02/2023</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1 class="titleWeb">Nội dung học tập ngày 28/02/2023</h1>
     <h2><u>1/ Bài các thẻ tiêu đề:</u></h2>
     <h3>Các loại thẻ tiêu đề:</h3>
@@ -23,62 +22,69 @@
     <p>Ta phải dựa vào nội dung thì mới quyết định nó là thẻ h hay không?</p>
     <h4># Không tuân thủ cấu trúc tiêu đề</h4>
     <p>
-        Tất cả các tiêu đề nên tuân theo một cấu trúc rõ ràng. Vì vậy, một
-        h2 phải theo sau một h1, một h3 phải theo sau một h2, … Bạn tránh quên điều này và hãy nhớ thêm
-        rằng bạn có
-        thể dễ dàng thay đổi kích thước của các thẻ tiêu đề bằng CSS.
+      Tất cả các tiêu đề nên tuân theo một cấu trúc rõ ràng. Vì vậy, một h2 phải
+      theo sau một h1, một h3 phải theo sau một h2, … Bạn tránh quên điều này và
+      hãy nhớ thêm rằng bạn có thể dễ dàng thay đổi kích thước của các thẻ tiêu
+      đề bằng CSS.
     </p>
     <p>
-        Tuy nhiên, bạn chỉ cần sử dụng CSS để tạo kiểu cho các tiêu đề theo cách chúng ta muốn, vì vậy kích
-        thước phông chữ không nên được dùng để xem xét khi quyết định lựa chọn các thẻ tiêu đề.
+      Tuy nhiên, bạn chỉ cần sử dụng CSS để tạo kiểu cho các tiêu đề theo cách
+      chúng ta muốn, vì vậy kích thước phông chữ không nên được dùng để xem xét
+      khi quyết định lựa chọn các thẻ tiêu đề.
     </p>
     <h4># Hoàn toàn không sử dụng thẻ tiêu đề</h4>
     <p>
-        Điều này thường xảy ra khi nhà phát triển web chưa hiểu được ý nghĩa và tầm quan trọng của việc
-        sử dụng các thẻ tiêu đề.
+      Điều này thường xảy ra khi nhà phát triển web chưa hiểu được ý nghĩa và
+      tầm quan trọng của việc sử dụng các thẻ tiêu đề.
     </p>
     <p>
-        Kết hợp sử dụng các thẻ tiêu đề giúp tạo ra cấu trúc phân cấp nội dung. Giúp người dùng và công
-        cụ tìm kiếm dễ dàng nắm bắt được nội dung trang web của bạn.
+      Kết hợp sử dụng các thẻ tiêu đề giúp tạo ra cấu trúc phân cấp nội dung.
+      Giúp người dùng và công cụ tìm kiếm dễ dàng nắm bắt được nội dung trang
+      web của bạn.
     </p>
     <h4># Sử dụng thẻ tiêu đề cho nội dung không phải tiêu đề</h4>
     <p>
-        Điều này thường xảy ra trong quá khứ, các nhà phát triển trang web thường sử dụng các “tricks” để “đánh
-        lừa” công cụ tìm kiếm. Bởi vì họ biết rằng các công cụ tìm kiếm sẽ ưu tiên cho các nội dung trong thẻ h,
-        họ thường spam các từ khóa cần SEO trong các thẻ h trên trang web.
+      Điều này thường xảy ra trong quá khứ, các nhà phát triển trang web thường
+      sử dụng các “tricks” để “đánh lừa” công cụ tìm kiếm. Bởi vì họ biết rằng
+      các công cụ tìm kiếm sẽ ưu tiên cho các nội dung trong thẻ h, họ thường
+      spam các từ khóa cần SEO trong các thẻ h trên trang web.
     </p>
     <p>
-        Ngày nay, các công cụ tìm kiếm đã rất thông minh. Các “tricks” spam từ khóa trong các thẻ h không mang
-        lại tác dụng, thậm chí còn phản tác dụng.
+      Ngày nay, các công cụ tìm kiếm đã rất thông minh. Các “tricks” spam từ
+      khóa trong các thẻ h không mang lại tác dụng, thậm chí còn phản tác dụng.
     </p>
 
     <h2><u>2/Bài thẻ p</u></h2>
     <h3><u>2.1/Note về Emmet</u></h3>
-    <p>- Khi muốn viết nhanh một thẻ chỉnh cần ghi tên thẻ rồi nhấn tab là oke</p>
+    <p>
+      - Khi muốn viết nhanh một thẻ chỉnh cần ghi tên thẻ rồi nhấn tab là oke
+    </p>
     <p>Ví dụ: muốn viết nhanh thẻ p thì chỉ cần nhấn p + tab</p>
     <h3>2.2/Tại sao phải dùng thẻ p?</h3>
-    <uL>
-        <li>
-            Đảm bảo tính ngữ nghĩa cho nội dung:một nội dung chỉ được gọi là có ngữ
-            nghĩa nếu nó được bọc trong 1 thẻ
-        </li>
-        <li>Khi dùng thẻ p thì ta mới có thể áp dụng CSS cho văn bản đó.</li>
-    </uL>
+    <ul>
+      <li>
+        Đảm bảo tính ngữ nghĩa cho nội dung:một nội dung chỉ được gọi là có ngữ
+        nghĩa nếu nó được bọc trong 1 thẻ
+      </li>
+      <li>Khi dùng thẻ p thì ta mới có thể áp dụng CSS cho văn bản đó.</li>
+    </ul>
     <h3>2.3/Tính chất của thẻ p:</h3>
     <ul>
-        <li>Mỗi thẻ sẽ luôn nằm trên một dòng mới.</li>
-        <li>Trình duyệt sẽ tự động thêm khoảng lề trên và dưới để ngăn cách giữa các thẻ <br>
-            Khoảng cách giữa các thẻ p được gọi là khoảng cách lề (margin), đây là khoảng cách mặc định, chúng ta có thể
-            sửa lại khoảng cách này khi sử dụng CSS.
-        </li>
+      <li>Mỗi thẻ sẽ luôn nằm trên một dòng mới.</li>
+      <li>
+        Trình duyệt sẽ tự động thêm khoảng lề trên và dưới để ngăn cách giữa các
+        thẻ <br />
+        Khoảng cách giữa các thẻ p được gọi là khoảng cách lề (margin), đây là
+        khoảng cách mặc định, chúng ta có thể sửa lại khoảng cách này khi sử
+        dụng CSS.
+      </li>
     </ul>
-</body>
-
+  </body>
 </html>
 
 <style>
-    .titleWeb {
-        text-align: center;
-        color: red;
-    }
+  .titleWeb {
+    text-align: center;
+    color: red;
+  }
 </style>
