Learn thẻ img  21/3/2023

--- a/Day06/index.html
+++ b/Day06/index.html
@@ -62,6 +62,21 @@
         </ul>
       </li>
       <li><a href="#!">Tools</a></li>
+
+      <p>
+        Cách liên kết đến một hình ảnh:
+        <a
+          href="	https://files.fullstack.edu.vn/f8-prod/user_photos/297005/63f48cfecf162.jpg"
+          target="_blank"
+          >bấm vào đây xem avatar</a>
+      </p>
+
+      <p>
+        Cách liên kết đến một video...
+        <a href="https://www.youtube.com/watch?v=oYbldfGTJ1o&t=90s" target="_blank">bấm vào đây xem video debug</a>
+      </p>
+
+      <p>Cách tải xuống một file <a href="https://htmlcss.fullstack.edu.vn/assets/f8_icon.png" download>tải xuống logo F8</a></p>
       <h3 id="global">Global</h3>
     </ul>
   </body>
