update thẻ img 21/3/2023

--- a/Day07/index.html
+++ b/Day07/index.html
@@ -27,10 +27,31 @@
 
     <h3>d.Các định dạng hình ảnh</h3>
     <ul>
-        <li>JPG/JPEG</li>
-        <li>PNG</li>
-        <li>SVG</li>
-        <li>Gif</li>
+      <li>
+        JPG/JPEG <br />
+        <img
+          src="https://files.fullstack.edu.vn/f8-prod/public-images/630a481031f7a.png"
+          alt="jpg-img"
+          width="500"
+          height="300"
+        />
+      </li>
+      <li>
+        PNG <br />
+        <img
+          src="https://files.fullstack.edu.vn/f8-prod/public-images/630dce097ac7d.png"
+          alt="png-img"
+          width="500"
+        />
+      </li>
+      <li>SVG</li>
+      <li>
+        Gif <br /><img
+          src="https://files.fullstack.edu.vn/f8-prod/manual_uploads/htmlcss-pro/dog_funny.gif"
+          alt="gif-img"
+          width="50%"
+        />
+      </li>
     </ul>
   </body>
 </html>
