--- a/Day07/index.html
+++ b/Day07/index.html
@@ -53,6 +53,54 @@
         />
       </li>
     </ul>
+
+    <a href="https://fullstack.edu.vn/" target="_blank">
+      <img
+        src="https://htmlcss.fullstack.edu.vn/assets/f8_icon.png"
+        alt="avatar F8"
+        title="bấm vào đây để đến f8"
+      />
+    </a>
+
+    <p>Ví dụ về cách dùng thẻ figure</p>
+    <figure>
+      <img
+        src="https://1.bp.blogspot.com/-b_otSOQowQg/WxpHfrxrAFI/AAAAAAAAAYM/xPcp2_SbEvQkrx4lM3d7-bQMJZWwjgw2QCLcBGAs/s1600/panda-loai-gau-truc-compressor.png"
+        alt=""
+      />
+    </figure>
+
+    <p>
+      Còn nếu muốn thêm chú thích cho ảnh và để đúng ngữ nghĩa thì ta dùng thẻ
+      figcaption
+    </p>
+    <p>Ảnh sau khi có chú thích</p>
+
+    <figure>
+      <a
+        href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tienganhphuquoc.com%2F2018%2F06%2Fpanda-loai-gau-truc.html&psig=AOvVaw259Aw8PrHrveM1DegcMH2Q&ust=1679922471387000&source=images&cd=vfe&ved=0CAMQjB1qFwoTCMjFwITV-f0CFQAAAAAdAAAAABAO"
+        target="_blank"
+      >
+        <img
+          src="https://1.bp.blogspot.com/-b_otSOQowQg/WxpHfrxrAFI/AAAAAAAAAYM/xPcp2_SbEvQkrx4lM3d7-bQMJZWwjgw2QCLcBGAs/s1600/panda-loai-gau-truc-compressor.png"
+          alt="gấu trúc"
+        />
+      </a>
+      <figcaption>Ảnh gấu trúc png</figcaption>
+    </figure>
+
+    <p>Test thử video</p>
+    <video
+      src="https://htmlreference.io/assets/HTML%205%20Video.mp4"
+      controls
+      autoplay
+    ></video>
+    <ul>
+      <li>Có controls: để có thể bấm được pause, tua,...</li>
+      <li>Có autoplay để nó tự động chạy video khi tải trang</li>
+      <li>Có loop để tự động loop video</li>
+      <li>Thuộc tính nào có required thì là thuộc tính bắt buộc</li>
+    </ul>
   </body>
 </html>
 
