--- a/Day08_27032023/Day08.html
+++ b/Day08_27032023/Day08.html
@@ -17,7 +17,19 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
 
     <h1 class="title">Nội dung học ngày 27/3/2023</h1>
-    <h2>Cách dùng thẻ &lt;pre&gt;</h2>
+    <p><b>Mục lục học:</b></p>
+    <ul>
+      <li><a href="#UsePreTag">Cách dùng thẻ &lt;pre&gt;</a></li>
+      <li><a href="#UseHTMLEntities">Cách dùng HTML Entities</a></li>
+      <li><a href="#UseCodeTag">Cách dùng thẻ &lt;code&gt;</a></li>
+      <li>
+        <a href="#!">
+          Để tạm href để khi bấm vào thì không tải lại trang hay chuyển lên đầu
+          trang
+        </a>
+      </li>
+    </ul>
+    <h2 id="UsePreTag">Cách dùng thẻ &lt;pre&gt;</h2>
 
     <p>
       Thẻ pre được dùng để giữa nguyên định dạng của nội dung bên trong nó, tức
@@ -29,20 +41,23 @@
         Và nội dung hiển thị ra trình duyệt sẽ có định dạng y hệt với cách viết trong code
     </pre>
 
-    <h2>Cách dùng HTML Entities</h2>
+    <h2 id="UseHTMLEntities">Cách dùng HTML Entities</h2>
     <p>
       Dưới đây là cách hiển thị được thẻ &lt;i&gt;: <br />
       Hôm nay là &lt;i&gt; ngày đẹp trời &lt;/i&gt; <br />
       Hay &lt;b&gt; tuyệt vời &lt;/b&gt;
     </p>
 
-    <h2>Cách dùng thẻ <code class="language-html">&lt;code&gt;</code>:</h2>
+    <h2 id="UseCodeTag">
+      Cách dùng thẻ <code class="language-html">&lt;code&gt;</code>:
+    </h2>
+
     <p>
       Thẻ &lt;code&gt; trong HTML được sử dụng để thể hiện các đoạn code trong
       nội dung trang web.
     </p>
 
-    <p>Cách để highlight code sử dụng thư viện PrismJS</p>
+    <p id="test">Cách để highlight code sử dụng thư viện PrismJS</p>
     <!-- Bước 3: Thêm class="language-html" cho thẻ <code> -->
 
     <!-- Nhờ vào việc thêm class="language-html" giờ đây ta có thể hightlight được code  -->
