--- a/Day08_27032023/Day08.html
+++ b/Day08_27032023/Day08.html
@@ -5,17 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nội dung ngày 27/3/2023</title>
-    <!-- Bước 1: Nhúng code CSS của PrismJS -->
+    <!-- Bước 1: Nhúng code CSS của PrismJS, vào CDN để lấy URL-->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.min.css"
+      href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-tomorrow.min.css"
     />
   </head>
   <body>
-    <!-- Bước 2: Nhúng code JavaScript của PrismJS -->
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
-
     <h1 class="title">Nội dung học ngày 27/3/2023</h1>
     <p><b>Mục lục học:</b></p>
     <ul>
@@ -105,16 +101,20 @@ a {color:red}</code>
 <code class="language-cs" >/*Khi dùng với ngôn ngữ C#*/
 string fullName = "Phan Văn Tài";
 int age = 20;
-DateTime now = DateTime.Now; </code>
+DateTime now = DateTime.Now;</code>
 </pre>
 
     <pre>
 <code class ="language-java">/*Comment: Khi dùng với ngôn ngữ Java*/
 String str = "Phan Văn Tài";
 int x = 5;
-Scanner sc = new Scanner(System.in);
-</code>
+Scanner sc = new Scanner(System.in);</code>
 </pre>
+
+    <!-- Để ở cuối thẻ body -->
+    <!-- Bước 2: Nhúng code JavaScript của PrismJS -->
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-core.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
   </body>
 </html>
 
