--- a/Day11_14052023/index.html
+++ b/Day11_14052023/index.html
@@ -39,7 +39,7 @@
         /* Thứ tự tham số top -> right -> bottom -> left
          Nếu không có left thì left = right
          Nếu không có right thì  */
-        padding: 8px 16px 20px;
+        padding: 8px 16px;
         border: 2px solid black;
         /* Tip bo góc */
         border-radius: 999px;
