--- a/Day26_03072023/Dự án flexbox/index.html
+++ b/Day26_03072023/Dự án flexbox/index.html
@@ -12,7 +12,8 @@
         rel="stylesheet" />
 
     <!------------ Styles ------------>
-    <link rel="stylesheet" href="./style.css" />
+    <!-- Đây là đường dẫn tuyệt đối -->
+    <link rel="stylesheet" href="/Day26_03072023/Dự án flexbox/style.css">
 </head>
 
 <body>
@@ -125,7 +126,7 @@
             </p>
         </div>
     </div>
-
+    
     <!------------ Wrap layout 1 ------------>
     <div class="wrap-layout-1">
         <div class="item">1</div>
@@ -156,7 +157,22 @@
         <div class="item">17</div>
         <div class="item">18</div>
     </div>
-
+    <table>
+        <tr class="row1">
+            <td class="col1"></td>
+            <td class="col2"></td>
+            <td class="col3"></td>
+            <td class="col4"></td>
+            <td class="col5"></td>
+        </tr>
+        <tr class="row2">
+            <td class="col1"></td>
+            <td class="col2"></td>
+            <td class="col3"></td>
+            <td class="col4"></td>
+            <td class="col5"></td>
+        </tr>
+    </table>
     <!------------ Center layout ------------>
     <div class="center-layout">
         <h3 class="item">Center me!</h3>
@@ -218,6 +234,14 @@
             </div>
         </div>
     </div>
+    
+    <div class="box-1"></div>
+    <div class="box-2">
+        <div class="child-1">
+            <div class="child-2"></div>
+        </div>
+    </div>
+    <div class="box-3"></div>
 </body>
 
 </html>
